# RoboCup2022RVRL_Demo

./: README.md  RViz3.rviz  images
images/: readme.md
robot_spawner_pkg/: package.xml  setup.cfg  setup.py
robot_spawner_pkg/src/robot_spawner_pkg/: spawn_robot.py
rvrl_cartographer/: CMakeLists.txt  package.xml
rvrl_cartographer/config/: p3at_lds_2d.lua
rvrl_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
rvrl_description/: CMakeLists.txt  package.xml
rvrl_description/urdf/: p3at.urdf
rvrl_description/urdf/p3at/: model-old.urdf  model.urdf
rvrl_gazebo/: CMakeLists.txt  package.xml
rvrl_gazebo/launch/: RoboCup2019-final-1.launch.py  RoboCup2019-semi-1.launch.py  RoboCup2019-semi-2.launch.py  Robocup2019_pre1-1.launch.py  Robocup2019_pre1-2.launch.py  Robocup2019_pre2-1.launch.py  Robocup2019_pre2-2.launch.py  before_table.launch.py  house_map.launch.py  robot_spawner.launch.py  robot_state_publisher.launch.py  robot_state_publisher2.launch.py
rvrl_gazebo/models/Robocup2019_operahouse/: model.config  model.sdf
rvrl_gazebo/models/Robocup2019_outdoor_kangaroo/: kangaroo.stl  model.config  model.sdf
rvrl_gazebo/models/Robocup2019_rectangle_maze/: model.config  model.sdf
rvrl_gazebo/models/Robocup2019_worldmap/: model.config  model.sdf
rvrl_gazebo/models/Two-levels/: Two-levels.blend  Two-levels.dae  model.config  model.sdf
rvrl_gazebo/models/TwoShells/: model.config  model.sdf
rvrl_gazebo/models/map_house/: model.config  model.sdf
rvrl_gazebo/models/maze-3levels/: Maze-3levels-30deg-20deg.blend  Maze-3levels-floor-center.txt  Maze-3levels.blend  Maze-3levels.blend1  Maze-3levels.dae  Maze-Base.blend  Maze-Base.blend1  Maze-Middle.blend  Maze-Top.blend  model.config  model.sdf
rvrl_gazebo/models/maze1/: maze1.stl  model.config  model.sdf
rvrl_gazebo/models/p3at/: model-old.sdf  model.config  model.sdf
rvrl_gazebo/models/robot_p3at/: model-1_4.sdf  model.sdf
rvrl_gazebo/models/victim175/: model.config  victim175.sdf
rvrl_gazebo/models/victim175_cold/: model.config  victim175.sdf  victim175_org.sdf
rvrl_gazebo/models/victim175_hot/: box_pink (copy).blend  model.config  victim175 (copy).sdf  victim175.blend  victim175.dae  victim175.sdf
rvrl_gazebo/models/victim175_hot_moving/: model.config  victim175.sdf  victim175_with_ic.sdf
rvrl_gazebo/models/victimWoman_voice/: model.config  model.sdf
rvrl_gazebo/models/victim_A_cold/: model.config  victim_A.blend  victim_A.dae  victim_A.sdf
rvrl_gazebo/models/victim_A_hot/: model.config  victim_A.sdf
rvrl_gazebo/models/victim_B_cold/: model.config  victim_B.dae  victim_B.sdf
rvrl_gazebo/models/victim_B_hot/: model.config  victim_B.blend  victim_B.sdf
rvrl_gazebo/worlds/: RoboCup2019-semi-1.model  RoboCup2019-semi-2.model  RoboCup2021-challenge2.model  Robocup2019_pre1-1.model  Robocup2019_pre1-2.model  Robocup2019_pre2-1.model  Robocup2019_pre2-2.model  house_world.model  two_levels.model
rvrl_navigation2/: CMakeLists.txt  package.xml
rvrl_navigation2/launch/: bringup_launch.py  navigation2.launch.py  navigation_launch.py  rvrl_navigation2.launch.py
rvrl_navigation2/param/: p3at.yaml
rvrl_navigation2/rviz/: p3at_navigation2.rviz  tb3_navigation2.rviz
rvrl_simulation/: CMakeLists.txt  package.xml
rvrl_tutorial/: disparity_camera1.py  obstacle_avoidance_depth_camera1.py  obstacle_avoidance_robot1.py  stop_robot1.py  stop_robot2.py  stop_robot3.py
