<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvrl_gazebo</name>
  <version>2.2.3</version>
  <description>
    Gazebo simulation package for the rescue virtual robot simulation
  </description>
  <maintainer email="m.h.shayesteh@gmail.com">Mohammad H. Shayesteh</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://rescuesim.robocup.org/competitions/virtual-robot-competition</url>
  <url type="repository">https://github.com/RoboCup-RSVRL</url>
  <url type="bugtracker">https://github.com/RoboCup-RSVRL</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <exec_depend>rvrl_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
