<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvrl_navigation2</name>
  <version>2.1.2</version>
  <description>
    ROS 2 launch scripts for navigation2
  </description> 
  <maintainer email="m.h.shayesteh@gmail.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
