<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rvrl_simulation</name>
  <version>2.2.3</version>
  <description>
    ROS 2 packages for rescue virtual robot simulations
  </description>
  <maintainer email="m.h.shayesteh@gmail.com">Mohammad H. Shayesteh</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://rescuesim.robocup.org/competitions/virtual-robot-competition</url>
  <url type="repository">https://github.com/RoboCup-RSVRL</url>
  <url type="bugtracker">https://github.com/RoboCup-RSVRL</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rvrl_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
